feat: add new components and improve routing infrastructure feat: add new components and improve routing infrastructure
- Introduced `Image`, `Blockquote`, and `H1` reusable components to enhance content rendering and modularity.
- Added new `Blog` and `WtfIsVinext` pages, including associated routing and layouts, to expand site content.
- Implemented a `NotFound` page for improved error handling and user experience.
- Updated the `MainLayout` to support customizable class names for improved flexibility in styling.
- Extended TailwindCSS classes and utilities (`bg`, `text`, `margin`, `padding`, etc.) for enriched styling options.
- Added new domain routing configurations in `wrangler.jsonc` to support `ethang.dev` and `www.ethang.dev`.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang-hono/wrangler.jsonc
+++ b/apps/ethang-hono/wrangler.jsonc
@@ -13,5 +13,15 @@
   },
   "placement": {
     "mode": "smart"
-  }
+  },
+  "routes": [
+    {
+      "custom_domain": true,
+      "pattern": "ethang.dev"
+    },
+    {
+      "custom_domain": true,
+      "pattern": "www.ethang.dev"
+    }
+  ]
 }
