--- a/apps/ethang-hono/package.json
+++ b/apps/ethang-hono/package.json
@@ -8,7 +8,7 @@
     "@sanity/block-content-to-html": "^2.0.0",
     "@sanity/client": "^7.16.0",
     "flowbite": "^4.0.1",
-    "flowbite-typography": "^1.0.5",
+    "highlight.js": "^11.11.1",
     "hono": "^4.12.2",
     "lodash": "^4.17.23",
     "luxon": "^3.7.2",
@@ -33,8 +33,8 @@
   "name": "ethang-hono",
   "scripts": {
     "cf-typegen": "wrangler types --env-interface CloudflareBindings",
-    "deploy": "wrangler deploy --minify",
-    "dev": "run-p tailwind wrangler:dev",
+    "deploy": "bun ./build.ts && wrangler deploy --minify",
+    "dev": "bun ./build.ts && run-p tailwind wrangler:dev",
     "lint": "eslint . --fix",
     "tailwind": "tailwindcss -i ./src/index.css -o ./public/index.css --watch",
     "wrangler:dev": "wrangler dev"
