feat: add URL uniqueness validation and update dependencies
- Introduced `isUrlUnique` utility to enforce unique URL validation in `learningPathType` and `courseType` schema types.
- Changed `courseType.url` field type from `string` to `url` for type accuracy.
- Added `lodash` and `@types/lodash` as project dependencies for utility functions.
- Updated `.gitignore` to include `.output.txt`.
- Regenerated `pnpm-lock.yaml` to synchronize dependency changes.

Signed-off-by: ethang <hello@ethang.email>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 **/.sanity/
 **/.wrangler/
+.output.txt
 
 # Created by https://www.toptal.com/developers/gitignore/api/node,react,jetbrains+all,visualstudiocode,storybookjs
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,react,jetbrains+all,visualstudiocode,storybookjs
