--- a/apps/ethang-admin/package.json
+++ b/apps/ethang-admin/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@sanity/orderable-document-list": "^1.5.1",
     "@sanity/vision": "^5.12.0",
+    "lodash": "^4.17.23",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "sanity": "^5.12.0",
@@ -14,6 +15,7 @@
   "devDependencies": {
     "@ethang/eslint-config": "^25.1.4",
     "@sanity/eslint-config-studio": "^6.0.0",
+    "@types/lodash": "^4.17.24",
     "@types/react": "^19.2.14",
     "browserslist-config-baseline": "^0.5.0",
     "eslint": "^10.0.2",
