--- a/apps/ethang-hono/package.json
+++ b/apps/ethang-hono/package.json
@@ -24,7 +24,9 @@
     "@types/node": "^25.3.1",
     "browserslist-config-baseline": "^0.5.0",
     "eslint": "^10.0.2",
+    "fast-glob": "^3.3.3",
     "npm-run-all": "^4.1.5",
+    "tsup": "^8.5.1",
     "wrangler": "^4.69.0"
   },
   "engines": {
