feat: modularize build scripts and improve development workflow
- Introduced `build-utilities.ts` to streamline script building using `tsup` with watch mode support.
- Replaced direct script building in `build.ts` with reusable `buildScripts` function.
- Added `dev.ts` to enable top-level await and improve the development workflow.
- Updated `package.json` to use `dev.ts` for the `dev` script, enhancing modularity and maintainability.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang-hono/package.json
+++ b/apps/ethang-hono/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "cf-typegen": "wrangler types --env-interface CloudflareBindings",
     "deploy": "bun ./build.ts && wrangler deploy --minify",
-    "dev": "bun ./build.ts && run-p tailwind wrangler:dev",
+    "dev": "bun ./dev.ts && run-p tailwind wrangler:dev",
     "lint": "eslint . --fix",
     "tailwind": "tailwindcss -i ./src/index.css -o ./public/index.css --watch",
     "wrangler:dev": "wrangler dev"
