--- a/apps/ethang-admin/package.json
+++ b/apps/ethang-admin/package.json
@@ -4,6 +4,7 @@
     "current node"
   ],
   "dependencies": {
+    "@sanity/code-input": "^7.0.8",
     "@sanity/orderable-document-list": "^1.5.1",
     "@sanity/vision": "^5.12.0",
     "lodash": "^4.17.23",
