feat(blog): add blog detail page, update models, and enhance layouts
- Introduced `BlogPost` component with dynamic routing and detailed view for individual blog posts.
- Added `BlogModel` to fetch blog data by slug from the backend for enhanced data handling.
- Created `PortableText` component to render rich text content using `@portabletext/to-html`.
- Updated `MainLayout` and `BlogLayout` to support new meta tags (SEO-friendly) and `isBlog` property.
- Extended `blogType` schema with a `description` field for improved metadata management.
- Updated `package.json` and `pnpm-lock.yaml` to include `@portabletext/to-html` as a dependency.
- Replaced `dev.ts` with `development.ts` in build scripts for better workflow alignment.
- Added `/blog/:slug` route to render individual blog posts dynamically.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang-hono/package.json
+++ b/apps/ethang-hono/package.json
@@ -5,6 +5,7 @@
   ],
   "dependencies": {
     "@ethang/store": "^2.3.2",
+    "@portabletext/to-html": "^5.0.1",
     "@sanity/block-content-to-html": "^2.0.0",
     "@sanity/client": "^7.16.0",
     "flowbite": "^4.0.1",
@@ -36,7 +37,8 @@
   "scripts": {
     "cf-typegen": "wrangler types --env-interface CloudflareBindings",
     "deploy": "bun ./build.ts && wrangler deploy --minify",
-    "dev": "bun ./dev.ts && run-p tailwind wrangler:dev",
+    "scripts:watch": "bun ./development.ts",
+    "dev": "run-p tailwind wrangler:dev scripts:watch",
     "lint": "eslint . --fix",
     "tailwind": "tailwindcss -i ./src/index.css -o ./public/index.css --watch",
     "wrangler:dev": "wrangler dev"
